samples/_failures_safe/1761654818_d1b22c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b51de773.c: In function ‘main’:
./samples/SAFE/__tmp_b51de773.c:150:5: error: expected expression at end of input
  150 |     return
      |     ^~~~~~
./samples/SAFE/__tmp_b51de773.c:150:5: error: expected declaration or statement at end of input
